--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
-    <link rel="stylesheet" href="css/animations.min.css">
+    <link rel="stylesheet" href="css/animate.css">
   </head>
   <body>
     <header id="app">
@@ -53,8 +53,8 @@
     			<div class="col-md-4"></div>
     			<div class="col-md-4"></div>
     			<div class="col-md-4">
-    				<h2 id="whatsapp" class="text-right"><span class="fa fa-whatsapp" aria-hidden="true"></span> +56 9 8888 8888</h2>
-    				<form action="" id="formContacto" method="post">
+    				<h2 id="whatsapp" class="text-right aniview" data-av-animation="zoomIn"><span class="fa fa-whatsapp" aria-hidden="true"></span> +56 9 8888 8888</h2>
+    				<form action="" id="formContacto" method="post" class="aniview" data-av-animation="zoomIn">
     					<input name="nombre" type="text" id="nombre" class="form-control radiusTop" placeholder="TU NOMBRE">
     					<input name="correo" type="email" id="correo" class="form-control inlineblock radiud0" placeholder="TU CORREO">
     					<input name="telefono" type="tel" id="telefono" class="form-control inlineblock radiud0" placeholder="TU TELEFONO">
@@ -71,60 +71,60 @@
     	<div class="container-fluid text-center">
     		<div class="row">
     			<div class="col-md-12">
-    				<h3 class="text-center">NUESTROS SERVICIOS</h3>
-                    <h2 class="text-center">SERVICIOS EN TERRENO</h2>
+    				<h3 class="text-center aniview" data-av-animation="slideInRight">NUESTROS SERVICIOS</h3>
+                    <h2 class="text-center aniview" data-av-animation="slideInLeft">SERVICIOS EN TERRENO</h2>
                     <br>
-                    <p class="text-center">Se cuenta con equipamiento y personal calificado para realizar las siguientes pruebas en sitio:</p>
+                    <p class="text-center aniview" data-av-animation="zoomIn">Se cuenta con equipamiento y personal calificado para realizar las siguientes pruebas en sitio:</p>
     			</div>
     			<div class="col-md-4">
-                    <h4 class="text-left" >Transformadores en general:</h4>
+                    <h4 class="text-left aniview" data-av-animation="zoomIn" >Transformadores en general:</h4>
     				<ul class="text-left">
-    					<li><i class="fa fa-chevron-right" aria-hidden="true"></i> Factor de potencia y capacidad de la aislación.</li>
-    					<li><i class="fa fa-chevron-right" aria-hidden="true"></i> Razón de transformación.</li>
-    					<li><i class="fa fa-chevron-right" aria-hidden="true"></i> Resistencia de enrollados.</li>
-    					<li><i class="fa fa-chevron-right" aria-hidden="true"></i> Resistencia de aislación e índice de polarización.</li>
-    					<li><i class="fa fa-chevron-right" aria-hidden="true"></i> Razón, polaridad y resistencia de transformadores de corriente.</li>
-    					<li><i class="fa fa-chevron-right" aria-hidden="true"></i> Pruebas a circuito de control y accesorios.</li>
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Medición de aisladores y pararrayos.</li>
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Balance magnético.</li>
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Descargas parciales</li>
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Impedancia de cortocircuito.</li>
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Reactancia de dispersión.</li>
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Pérdidas en carga y en vacío.</li>
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Voltaje aplicado.</li>
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> SFRA (Barrido de frecuencia)</li>
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Ruido</li>
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Pruebas de precisión en TP’s y TC’s</li>
+    					<li class="aniview" data-av-animation="slideInLeft"><i class="fa fa-chevron-right" aria-hidden="true"></i> Factor de potencia y capacidad de la aislación.</li>
+    					<li class="aniview" data-av-animation="slideInLeft"><i class="fa fa-chevron-right" aria-hidden="true"></i> Razón de transformación.</li>
+    					<li class="aniview" data-av-animation="slideInLeft"><i class="fa fa-chevron-right" aria-hidden="true"></i> Resistencia de enrollados.</li>
+    					<li class="aniview" data-av-animation="slideInLeft"><i class="fa fa-chevron-right" aria-hidden="true"></i> Resistencia de aislación e índice de polarización.</li>
+    					<li class="aniview" data-av-animation="slideInLeft"><i class="fa fa-chevron-right" aria-hidden="true"></i> Razón, polaridad y resistencia de transformadores de corriente.</li>
+    					<li class="aniview" data-av-animation="slideInLeft"><i class="fa fa-chevron-right" aria-hidden="true"></i> Pruebas a circuito de control y accesorios.</li>
+                        <li class="aniview" data-av-animation="slideInLeft"><i class="fa fa-chevron-right" aria-hidden="true"></i> Medición de aisladores y pararrayos.</li>
+                        <li class="aniview" data-av-animation="slideInLeft"><i class="fa fa-chevron-right" aria-hidden="true"></i> Balance magnético.</li>
+                        <li class="aniview" data-av-animation="slideInLeft"><i class="fa fa-chevron-right" aria-hidden="true"></i> Descargas parciales</li>
+                        <li class="aniview" data-av-animation="slideInLeft"><i class="fa fa-chevron-right" aria-hidden="true"></i> Impedancia de cortocircuito.</li>
+                        <li class="aniview" data-av-animation="slideInLeft"><i class="fa fa-chevron-right" aria-hidden="true"></i> Reactancia de dispersión.</li>
+                        <li class="aniview" data-av-animation="slideInLeft"><i class="fa fa-chevron-right" aria-hidden="true"></i> Pérdidas en carga y en vacío.</li>
+                        <li class="aniview" data-av-animation="slideInLeft"><i class="fa fa-chevron-right" aria-hidden="true"></i> Voltaje aplicado.</li>
+                        <li class="aniview" data-av-animation="slideInLeft"><i class="fa fa-chevron-right" aria-hidden="true"></i> SFRA (Barrido de frecuencia)</li>
+                        <li class="aniview" data-av-animation="slideInLeft"><i class="fa fa-chevron-right" aria-hidden="true"></i> Ruido</li>
+                        <li class="aniview" data-av-animation="slideInLeft"><i class="fa fa-chevron-right" aria-hidden="true"></i> Pruebas de precisión en TP’s y TC’s</li>
     				</ul>
     			</div>
     			<div class="col-md-4">
-                    <h4 class="text-left">Equipos de maniobra y protección en general:</h4>
+                    <h4 class="text-left aniview" data-av-animation="zoomIn">Equipos de maniobra y protección en general:</h4>
     				<ul class="text-left">
-    					<li><i class="fa fa-chevron-right" aria-hidden="true"></i> Resistencia de aislación.</li>
-    					<li><i class="fa fa-chevron-right" aria-hidden="true"></i> Simultaneidad de contacto.</li>
-    					<li><i class="fa fa-chevron-right" aria-hidden="true"></i> Resistencia de contacto./li>
-    					<li><i class="fa fa-chevron-right" aria-hidden="true"></i> Ajustes de protección</li>
-    					<li><i class="fa fa-chevron-right" aria-hidden="true"></i> Pruebas a circuito de control y accesorios.</li>
-    					<li><i class="fa fa-chevron-right" aria-hidden="true"></i> Pruebas de operación.</li>
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Voltaje aplicado</li>
+    					<li class="aniview" data-av-animation="zoomIn"><i class="fa fa-chevron-right" aria-hidden="true"></i> Resistencia de aislación.</li>
+    					<li class="aniview" data-av-animation="zoomIn"><i class="fa fa-chevron-right" aria-hidden="true"></i> Simultaneidad de contacto.</li>
+    					<li class="aniview" data-av-animation="zoomIn"><i class="fa fa-chevron-right" aria-hidden="true"></i> Resistencia de contacto.</li>
+    					<li class="aniview" data-av-animation="zoomIn"><i class="fa fa-chevron-right" aria-hidden="true"></i> Ajustes de protección</li>
+    					<li class="aniview" data-av-animation="zoomIn"><i class="fa fa-chevron-right" aria-hidden="true"></i> Pruebas a circuito de control y accesorios.</li>
+    					<li class="aniview" data-av-animation="zoomIn"><i class="fa fa-chevron-right" aria-hidden="true"></i> Pruebas de operación.</li>
+                        <li class="aniview" data-av-animation="zoomIn"><i class="fa fa-chevron-right" aria-hidden="true"></i> Voltaje aplicado</li>
     				</ul>
     			</div>
     			<div class="col-md-4">
-                    <h4 class="text-left">Medidas generales:</h4>
+                    <h4 class="text-left aniview" data-av-animation="zoomIn">Medidas generales:</h4>
     				<ul class="text-left">
-    					<li><i class="fa fa-chevron-right" aria-hidden="true"></i> Descargas parciales en Motores y Generadores.</li>
-    					<li><i class="fa fa-chevron-right" aria-hidden="true"></i> Mallas a tierra.</li>
-    					<li><i class="fa fa-chevron-right" aria-hidden="true"></i> Acoplamientos de malla a tierra.</li>
-    					<li><i class="fa fa-chevron-right" aria-hidden="true"></i> Calidad de energía.</li>
-    					<li><i class="fa fa-chevron-right" aria-hidden="true"></i> Mantenimientos preventivos de equipos eléctricos (Transformadores, CCM, CDC,Tableros, Switchgear, Motores y Generadores)</li>
-    					<li><i class="fa fa-chevron-right" aria-hidden="true"></i> Montaje y puesta de equipos eléctricos.</li>
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Diagnóstico y Pruebas Eléctricas.</li>
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Inspección y Mantenimiento de CDBC.</li>
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Reemplazo de CDBC.</li>
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Pruebas a interruptores.</li>
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Reparaciones transformadores y generadores.</li>
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Inspección de pruebas FAT</li>
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Toma de muestras de aceite.</li>
+    					<li class="aniview" data-av-animation="slideInRight"><i class="fa fa-chevron-right" aria-hidden="true"></i> Descargas parciales en Motores y Generadores.</li>
+    					<li class="aniview" data-av-animation="slideInRight"><i class="fa fa-chevron-right" aria-hidden="true"></i> Mallas a tierra.</li>
+    					<li class="aniview" data-av-animation="slideInRight"><i class="fa fa-chevron-right" aria-hidden="true"></i> Acoplamientos de malla a tierra.</li>
+    					<li class="aniview" data-av-animation="slideInRight"><i class="fa fa-chevron-right" aria-hidden="true"></i> Calidad de energía.</li>
+    					<li class="aniview" data-av-animation="slideInRight"><i class="fa fa-chevron-right" aria-hidden="true"></i> Mantenimientos preventivos de equipos eléctricos (Transformadores, CCM, CDC,Tableros, Switchgear, Motores y Generadores)</li>
+    					<li class="aniview" data-av-animation="slideInRight"><i class="fa fa-chevron-right" aria-hidden="true"></i> Montaje y puesta de equipos eléctricos.</li>
+                        <li class="aniview" data-av-animation="slideInRight"><i class="fa fa-chevron-right" aria-hidden="true"></i> Diagnóstico y Pruebas Eléctricas.</li>
+                        <li class="aniview" data-av-animation="slideInRight"><i class="fa fa-chevron-right" aria-hidden="true"></i> Inspección y Mantenimiento de CDBC.</li>
+                        <li class="aniview" data-av-animation="slideInRight"><i class="fa fa-chevron-right" aria-hidden="true"></i> Reemplazo de CDBC.</li>
+                        <li class="aniview" data-av-animation="slideInRight"><i class="fa fa-chevron-right" aria-hidden="true"></i> Pruebas a interruptores.</li>
+                        <li class="aniview" data-av-animation="slideInRight"><i class="fa fa-chevron-right" aria-hidden="true"></i> Reparaciones transformadores y generadores.</li>
+                        <li class="aniview" data-av-animation="slideInRight"><i class="fa fa-chevron-right" aria-hidden="true"></i> Inspección de pruebas FAT</li>
+                        <li class="aniview" data-av-animation="slideInRight"><i class="fa fa-chevron-right" aria-hidden="true"></i> Toma de muestras de aceite.</li>
     				</ul>
     			</div>
     		</div>
@@ -134,48 +134,60 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="text-center">NUESTROS SERVICIOS</h3>
-                    <h2 class="text-center">SERVICIOS FABRICA</h2>
+                    <h3 class="text-center aniview" data-av-animation="slideInRight">NUESTROS SERVICIOS</h3>
+                    <h2 class="text-center aniview" data-av-animation="slideInLeft">SERVICIOS FABRICA</h2>
                     <br>
-                    <p class="text-center">Se cuenta con equipamiento y personal calificado para realizar las siguientes actividades:</p>
+                    <p class="text-center aniview" data-av-animation="zoomIn">Se cuenta con equipamiento y personal calificado para realizar las siguientes actividades:</p>
                 </div>
                 <div class="col-md-4">
                     <ul class="text-left">
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Diseño y fabricación transformadores de poder hasta 5000kVA y 36kV</li> 
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Revisión y desarrollo de Especificaciones técnicas.</li> 
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Revisión y desarrollo de memorias de cálculos.</li> 
+                        <li class="aniview" data-av-animation="slideInLeft"><i class="fa fa-chevron-right" aria-hidden="true"></i> Diseño y fabricación transformadores de poder hasta 5000kVA y 36kV</li> 
+                        <li class="aniview" data-av-animation="slideInLeft"><i class="fa fa-chevron-right" aria-hidden="true"></i> Revisión y desarrollo de Especificaciones técnicas.</li> 
+                        <li class="aniview" data-av-animation="slideInLeft"><i class="fa fa-chevron-right" aria-hidden="true"></i> Revisión y desarrollo de memorias de cálculos.</li> 
                     </ul>
                 </div>
                 <div class="col-md-4">
                     <ul class="text-left">
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Memoria de Cálculos Sísmicos.</li>
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Memoria Cálculo de esfuerzos mecánicos de cortocircuito.</li> 
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Estudios de sobrecargas.</li> 
+                        <li class="aniview" data-av-animation="zoomIn"><i class="fa fa-chevron-right" aria-hidden="true"></i> Memoria de Cálculos Sísmicos.</li>
+                        <li class="aniview" data-av-animation="zoomIn"><i class="fa fa-chevron-right" aria-hidden="true"></i> Memoria Cálculo de esfuerzos mecánicos de cortocircuito.</li> 
+                        <li class="aniview" data-av-animation="zoomIn"><i class="fa fa-chevron-right" aria-hidden="true"></i> Estudios de sobrecargas.</li> 
                         
                     </ul>
                 </div>
                 <div class="col-md-4">
                     <ul class="text-left">
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Servicios de consultoría.</li>
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Capacitación y entrenamiento.</li> 
-                        <li><i class="fa fa-chevron-right" aria-hidden="true"></i> Análisis de fallas y estudios de transformadores en falla.</li> 
+                        <li class="aniview" data-av-animation="slideInRight"><i class="fa fa-chevron-right" aria-hidden="true"></i> Servicios de consultoría.</li>
+                        <li class="aniview" data-av-animation="slideInRight"><i class="fa fa-chevron-right" aria-hidden="true"></i> Capacitación y entrenamiento.</li> 
+                        <li class="aniview" data-av-animation="slideInRight"><i class="fa fa-chevron-right" aria-hidden="true"></i> Análisis de fallas y estudios de transformadores en falla.</li> 
                     </ul>
                 </div>
             </div>
         </div>
     </section>
-    <!--section id="video">
+    <section id="video">
     	<div class="container">
          <div class="row">
             <div class="col-md-12">
-                <h3 class="text-center">MIRA NUESTRO VIDEO</h3>
+                <h2 class="text-center aniview" data-av-animation="bounceIn">NUESTRO EQUIPO</h2>
             </div>
-             <div class="col-md-12">
-                 <iframe width="854" height="480" src="https://www.youtube.com/embed/DHdkRvEzW84" frameborder="0" allowfullscreen></iframe>
+             <div class="col-md-4 aniview" data-av-animation="bounceIn">
+                 <img src="img/avatar1.jpg" alt="" class="img-circle">
+                 <h3>MARCO MORA</h3>
+                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad </p>
+             </div>
+             <div class="col-md-4 aniview" data-av-animation="bounceIn">
+                 <img src="img/avatar2.jpg" alt="" class="img-circle">
+                 <h3>ESTEBAN SANTANDER</h3>
+                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad </p>
+             </div>
+             <div class="col-md-4 aniview" data-av-animation="bounceIn">
+                 <img src="img/avatar3.jpg" alt="" class="img-circle">
+                 <h3>CONSTANZA FAUNDEZ</h3>
+                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad </p>
              </div>
          </div>   
         </div>
-    </section-->
+    </section>
     <footer>
     	<div class="container-fluid">
     		<div class="row">
@@ -204,9 +216,17 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script src="js/jquery.aniview.js"></script>
     <script type="text/javascript" src="js/validacion.js"></script>
     <script type="text/javascript" src="js/enviar.js"></script>
-    <script src="js/animations.min.js"></script>
-    <!--script src="/dist/build.js"></script-->
+    <script>
+        $(document).ready(function(){
+            var options = {
+                animateThreshold: 100,
+                scrollPollInterval: 20
+            }
+            $('.aniview').AniView(options);
+        })
+    </script>
   </body>
 </html>
