--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
         </div>
     	<div class="container colSub">
     		<div class="row">
-    			<div class="col-md-4"></div>
-    			<div class="col-md-4"></div>
-    			<div class="col-md-4">
+    			<div class="col-md-offset-8 col-md-4">
     				<h2 id="whatsapp" class="text-right aniview" data-av-animation="zoomIn"><span class="fa fa-whatsapp" aria-hidden="true"></span> +56 9 8888 8888</h2>
     				<form action="" id="formContacto" method="post" class="aniview" data-av-animation="zoomIn">
     					<input name="nombre" type="text" id="nombre" class="form-control radiusTop" placeholder="TU NOMBRE">
